--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -747,6 +747,13 @@
       "BTN_SUBMIT": "@:COMPONENTS.ONBOARDING.BTN_SUBMIT",
       "BTN_CANCEL": "@:COMPONENTS.ONBOARDING.BTN_CANCEL"
     },
+    "TOPIC_REQUESTS": {
+      "HEADING": "Topic requests",
+      "NO_REQUESTS_HEADING": "There are no requests!",
+      "NO_REQUESTS_DESC": "There are no pending requests for topics to be added to this group.",
+      "BTN_ACCEPT": "Accept",
+      "BTN_REJECT": "Reject"
+    },
     "TOPIC_VOTE_CAST": {
       "PREVIEW_VOTE_TYPE_REGULAR": "@:COMPONENTS.TOPIC_VOTE_CREATE.PREVIEW_VOTE_TYPE_REGULAR",
       "TXT_YOU_CAN_CHOOSE_OPTIONS": "@:VIEWS.TOPICS_TOPICID.TXT_YOU_CAN_CHOOSE_OPTIONS",
@@ -1737,6 +1744,7 @@
       "BTN_OPTION_ADD_TOPICS": "Add topics",
       "TITLE_ADD_OR_CREATE": "Add or create a topic",
       "BTN_ADD_OR_CREATE_TOPICS": "Add or create a topic",
+      "BTN_VIEW_TOPIC_REQUESTS": "View topic requests",
       "HEADING_CREATE_A_NEW_TOPIC": "Create a new topic",
       "BTN_OPTION_REPORT": "Report to admin",
       "BTN_OPTION_LEAVE": "Leave group",
