--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -112,6 +112,20 @@
       "FILTER_USER": "Activity related to user",
       "FILTER_SELF": "My activity"
     },
+    "ADD_IDEA": {
+      "FOOTER_MENU_TITLE": "Join the ideation",
+      "FOOTER_MENU_BTN_ADD_IDEA": "Add your idea",
+      "FOOTER_FORM_TITLE": "Join the ideation",
+      "PLACEHOLDER_ADD_STATEMENT_TO_IDEA": "Your main statement",
+      "SUBJECT_CHARACTERS_LEFT": "Characters left: {{chars}}/{{charsLeft}}",
+      "IDEA_TYPE_CHARACTER_LIMIT": "Character limit: {{numberOfCharacters}}",
+      "CHARACTER_LIMIT": "@:COMPONENTS.GROUP_INVITE.CHARACTER_LIMIT",
+      "PLACEHOLDER_EXPLAIN_YOUR_IDEA": "Write down your idea",
+      "BTN_ADD_IMAGE": "Add image",
+      "BTN_IDEA_POST": "Add your idea",
+      "MSG_ERROR_SUBJECT": "Idea statement must be 1 to {{chars}} characters long.",
+      "MSG_ERROR_DESCRIPTION": "Idea description must be 1 to {{chars}} characters long."
+    },
     "ARGUMENT": {
       "LBL_ARGUMENT_ACTIONS": "Argument actions",
       "OPTION_EDIT": "edit",
@@ -314,6 +328,15 @@
       "HEADING_RULES": "@:VIEWS.GROUP.RULES_OF_CONDUCT",
       "BTN_JOIN": "@:VIEWS.GROUP.BTN_JOIN",
       "LNK_CANCEL": "@:LNK_CANCEL"
+    },
+    "IDEA_REPORT": {
+      "HEADING": "Report idea to admin",
+      "MESSAGE_MAIN": "You are reporting",
+      "LABLE_REASON": "Reason for reporting *",
+      "PLACEHOLDER_REPORT_TEXT": "Explain, why you found this idea inappropriate...",
+      "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
+      "BTN_SUBMIT": "Report to admin",
+      "BTN_CANCEL": "@:LNK_CANCEL"
     },
     "TOPIC_JOIN": {
       "HEADING": "Join topic",
@@ -520,6 +543,17 @@
       "LNK_VIEW_MORE_RESULTS": "View more results",
       "TXT_OOPS_NO_RESULTS": "We couldn’t find any results matching your search :(",
       "TXT_MAYBE_TYPO": "Maybe there's a typo in your search?"
+    },
+    "TOPIC_IDEATION": {
+      "TAB_IDEAS": "{{count}} ideas",
+      "TAB_FOLDERS": "{{count}} folders",
+      "BTN_ADD_YOUR_IDEA": "Add your idea",
+      "BTN_IDEATION_ACTIONS": "@:VIEWS.IDEATION_CREATE.BTN_IDEATION_ACTIONS",
+      "NO_IDEAS_HEADING": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_HEADING",
+      "NO_IDEAS_BTN_ADD": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_BTN_ADD",
+      "NO_IDEAS_DESC_HEADING": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_DESC_HEADING",
+      "NO_IDEAS_DESC_BEFORE": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_DESC_BEFORE",
+      "NO_IDEAS_DESC_AFTER": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_DESC_AFTER"
     },
     "TOUR": {
       "LNK_SKIP": "Skip",
@@ -1170,6 +1204,11 @@
     "TOPIC_DELETE_ARGUMENT_TXT_ARE_YOU_SURE": "Are you sure you want to delete this argument? You cannot undo this action.",
     "TOPIC_DELETE_ARGUMENT_BTN_NO": "@:MODALS.TOPIC_ARGUMENT_REPORT_BTN_NO",
     "TOPIC_DELETE_ARGUMENT_BTN_YES": "Yes, delete this argument",
+    "TOPIC_DELETE_IDEA_TITLE": "Delete idea",
+    "TOPIC_DELETE_IDEA_DESCRIPTION": "Idea by {{usersFullName}}",
+    "TOPIC_DELETE_IDEA_TXT_ARE_YOU_SURE": "Are you sure you want to delete this idea? You cannot undo this action.",
+    "TOPIC_DELETE_IDEA_BTN_YES": "Yes, delete this idea",
+    "TOPIC_DELETE_IDEA_BTN_NO": "@:MODALS.TOPIC_ARGUMENT_REPORT_BTN_NO",
     "TOPIC_DELETE_REPLY_TITLE": "Delete reply",
     "TOPIC_DELETE_REPLY_DESCRIPTION": "Reply by participant {{usersFullName}}",
     "TOPIC_DELETE_REPLY_TXT_ARE_YOU_SURE": "Are you sure you want to delete this reply? You cannot undo this action.",
@@ -1845,6 +1884,83 @@
       "HELP_LNK_LEARN_MORE": "Learn more about groups",
       "NOTIFICATION_SUCCESS_TITLE": "Group successfully created",
       "NOTIFICATION_SUCCESS_MESSAGE": "Congratulations! Keep in mind you can always manage the group via the group actions menu."
+    },
+    "IDEATION_CREATE": {
+      "HEADING": "Create an ideation topic",
+      "CREATE_TAB_1": "@:VIEWS.VOTE_CREATE.CREATE_TAB_1",
+      "CREATE_TAB_2": "@:VIEWS.VOTE_CREATE.CREATE_TAB_2",
+      "CREATE_TAB_3": "Ideation",
+      "CREATE_TAB_4": "@:VIEWS.VOTE_CREATE.CREATE_TAB_4",
+      "TITLE_HEADER_IMAGE": "@:VIEWS.TOPIC_CREATE.TITLE_HEADER_IMAGE",
+      "TITLE_HEADING": "@:VIEWS.TOPIC_CREATE.TITLE_HEADING",
+      "HEADER_IMAGE_BTN_CANCEL": "@:LNK_CANCEL",
+      "HEADER_IMAGE_BTN_REMOVE": "@:VIEWS.TOPIC_CREATE.HEADER_IMAGE_BTN_REMOVE",
+      "HEADER_IMAGE_UPLOAD_DESC": "@:VIEWS.TOPIC_CREATE.HEADER_IMAGE_UPLOAD_DESC",
+      "HEADER_IMAGE_UPLOAD_DESC_TEXT": "@:VIEWS.TOPIC_CREATE.HEADER_IMAGE_UPLOAD_DESC_TEXT",
+      "HEADER_IMAGE_UPLOAD_BTN": "@:VIEWS.TOPIC_CREATE.HEADER_IMAGE_UPLOAD_BTN",
+      "TITLE_INTRO": "@:VIEWS.TOPIC_CREATE.TITLE_INTRO",
+      "TOOLTIP_TOPIC_INTRO_TITLE": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_INTRO_TITLE",
+      "TOOLTIP_TOPIC_INTRO_CONTENT": "@:VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_INTRO_CONTENT",
+      "TITLE_INTRO_TEXT": "@:VIEWS.TOPIC_CREATE.TITLE_INTRO_TEXT",
+      "TITLE_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION",
+      "TITLE_DESCRIPTION_TEXT": "@:VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION_TEXT",
+      "BTN_SECTION_ADD": "@:VIEWS.TOPIC_CREATE.BTN_SECTION_ADD",
+      "SETTINGS_HEADING_VISIBILITY": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_VISIBILITY",
+      "SETTINGS_VISIBILITY_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_VISIBILITY_DESC",
+      "SETTINGS_VISIBILITY_PRIVATE": "@:VIEWS.TOPIC_CREATE.SETTINGS_VISIBILITY_PRIVATE",
+      "SETTINGS_VISIBILITY_PRIVATE_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_VISIBILITY_PRIVATE_DESC",
+      "SETTINGS_VISIBILITY_PUBLIC": "@:VIEWS.TOPIC_CREATE.SETTINGS_VISIBILITY_PUBLIC",
+      "SETTINGS_VISIBILITY_PUBLIC_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_VISIBILITY_PUBLIC_DESC",
+      "SETTINGS_HEADING_CATEGORY_AND_LOCALITY": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_CATEGORY_AND_LOCALITY",
+      "SETTINGS_CATEGORY_SELECT_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_CATEGORY_SELECT_DESC",
+      "SETTINGS_CATEGORY_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_CATEGORY_SELECT",
+      "SETTINGS_HEADING_LOCALITY": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_LOCALITY",
+      "SETTINGS_LOCALITY_SELECT_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_LOCALITY_SELECT_DESC",
+      "SETTINGS_COUNTRY_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_COUNTRY_SELECT",
+      "SETTINGS_LANGUAGE_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_LANGUAGE_SELECT",
+      "SETTINGS_HEADING_ADD_TO_GROUP": "@:VIEWS.TOPIC_CREATE.SETTINGS_HEADING_ADD_TO_GROUP",
+      "SETTINGS_ADD_TO_GROUP_DESC": "@:VIEWS.TOPIC_CREATE.SETTINGS_ADD_TO_GROUP_DESC",
+      "SETTINGS_GROUP_SELECT": "@:VIEWS.TOPIC_CREATE.SETTINGS_GROUP_SELECT",
+      "MEMBER_GROUP_HEADING_TITLE": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_TITLE",
+      "MEMBER_GROUP_HEADING_GROUP_PERMISSIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
+      "MEMBER_GROUP_HEADING_ACTIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_ACTIONS",
+      "NO_GROUPS_HEADING": "@:VIEWS.TOPIC_CREATE.NO_GROUPS_HEADING",
+      "NO_GROUPS_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.NO_GROUPS_DESCRIPTION",
+      "SETTINGS_HEADING_IDEATION_QUESTION": "Ideation question",
+      "SETTINGS_HEADING_IDEATION_QUESTION_DESC": "Please add a specific ideation question to bring focus for the participants.",
+      "SETTINGS_IDEATION_QUESTION_PLACEHOLDER": "Question",
+      "SETTINGS_HEADING_IDEATION_DEADLINE": "@:COMPONENTS.TOPIC_VOTE_DEADLINE.LBL_OPTION_DEADLINE",
+      "SETTINGS_HEADING_IDEATION_DEADLINE_DESC": "Deadline when the idea gathering closes.",
+      "SETTINGS_IDEATION_DEADLINE_PLACEHOLDER": "Select a date",
+      "PREVIEW_INFO": "<b>This is a preview of your topic!</b> You can still edit your topic at any point prior to starting the ideation.",
+      "BTN_IDEATION_ACTIONS": "Manage ideation",
+      "NO_IDEAS_HEADING": "There are no ideas yet",
+      "NO_IDEAS_BTN_ADD": "Add idea",
+      "NO_IDEAS_DESC_HEADING": "How ideation works",
+      "NO_IDEAS_DESC_BEFORE": "By adding an ideation section to your topic, you incentivise your participants to share ideas. Ideas can be considered more, or less, “illuminating” so the top ideas will show up higher.",
+      "NO_IDEAS_DESC_AFTER": "Afterwards you can take the best idea(s) and put them to the vote to reach a final conclusion.",
+      "BTN_READ_MORE": "@:VIEWS.TOPIC_CREATE.BTN_READ_MORE",
+      "BTN_READ_LESS": "@:VIEWS.TOPIC_CREATE.BTN_READ_LESS",
+      "FOOTER_BTN_CONTINUE": "@:BTN_CONTINUE",
+      "FOOTER_BTN_SAVE_AS_DRAFT": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_AS_DRAFT",
+      "FOOTER_BTN_CREATE": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_CREATE",
+      "FOOTER_BTN_SAVE_CHANGES": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_CHANGES",
+      "FOOTER_BTN_SAVE_CHANGES_AND_PUBLISH": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_CHANGES_AND_PUBLISH",
+      "HELP_HEADING": "@:VIEWS.TOPIC_CREATE.HELP_HEADING",
+      "HELP_DESCRIPTION": "Creating a voting topic allows you to cut straight to the vote. If you'd like a discussion before voting, create a discussion topic then add a voting phase",
+      "HELP_LNK_LEARN_MORE": "@:VIEWS.TOPIC_CREATE.HELP_LNK_LEARN_MORE",
+      "HELP_NEXT_HEADING": "@:VIEWS.TOPIC_CREATE.HELP_NEXT_HEADING",
+      "HELP_NEXT_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.HELP_NEXT_DESCRIPTION",
+      "HELP_ITEM_SHARE_AND_INVITE": "@:VIEWS.TOPIC_CREATE.HELP_ITEM_SHARE_AND_INVITE",
+      "HELP_ITEM_START_COLLECTING_VOTES": "Start collecting votes",
+      "HELP_ITEM_ADD_IDEATION": "@:VIEWS.TOPIC_CREATE.HELP_ITEM_ADD_IDEATION",
+      "HELP_ITEM_ADD_FOLLOW_UP": "@:VIEWS.TOPIC_CREATE.HELP_ITEM_ADD_FOLLOW_UP",
+      "WRITE_TOGETHER_HEADING": "@:VIEWS.TOPIC_CREATE.WRITE_TOGETHER_HEADING",
+      "WRITE_TOGETHER_DESC": "@:VIEWS.TOPIC_CREATE.WRITE_TOGETHER_DESC",
+      "BTN_INVITE_CO_EDITORS": "@:VIEWS.TOPIC_CREATE.BTN_INVITE_CO_EDITORS",
+      "ERROR_MISSING_QUESTION": "Voting question is required!",
+      "ERROR_AT_LEAST_TWO_OPTIONS_REQUIRED": "@:MSG_ERROR_POST_API_USERS_TOPICS_VOTES_40001",
+      "SUCCESS_VOTE_STARTED": "Voting has successfully been started"
     },
     "LOGIN": {
       "BTN_BACK": "Back to dashboard",
