Update ideation views

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -329,6 +329,16 @@
       "BTN_JOIN": "@:VIEWS.GROUP.BTN_JOIN",
       "LNK_CANCEL": "@:LNK_CANCEL"
     },
+    "IDEABOX": {
+      "OPTION_EDIT": "Edit idea",
+      "OPTION_FAVOURITE": "@:VIEWS.TOPICS_TOPICID.OPTION_FAVOURITE",
+      "OPTION_UNFAVOURITE": "@:VIEWS.TOPICS_TOPICID.OPTION_UNFAVOURITE",
+      "OPTION_VIEW_PREVIOUS_VERSIONS": "View previous versions",
+      "OPTION_ADD_TO_FOLDER": "Add to folder",
+      "OPTION_REPORT": "Report to admin",
+      "OPTION_REMOVE": "Remove idea",
+      "REPLIES": "{{count}} replies"
+    },
     "IDEA_REPORT": {
       "HEADING": "Report idea to admin",
       "MESSAGE_MAIN": "You are reporting",
@@ -548,6 +558,17 @@
       "TAB_IDEAS": "{{count}} ideas",
       "TAB_FOLDERS": "{{count}} folders",
       "BTN_ADD_YOUR_IDEA": "Add your idea",
+      "IDEA_FILTER_TYPE": "Idea type",
+      "FILTER_ALL": "@:VIEWS.MY_TOPICS.FILTER_ALL",
+      "FILTER_TYPE_YOUR_IDEAS": "Your ideas",
+      "FILTER_TYPE_FAVOURITES": "Favourites",
+      "FILTER_TYPE_MODERATED": "Moderated",
+      "IDEA_FILTER_ORDER": "@:VIEWS.GROUP.TOPICS_FILTER_ORDER",
+      "FILTER_ORDER_MOST_LIKED": "Most liked",
+      "FILTER_ORDER_MOST_RECENT": "Most recent",
+      "FILTER_ORDER_MOST_REPLIES": "Most replies",
+      "IDEA_FILTER_PARTICIPANTS": "Participants",
+      "FILTER_PLACEHOLDER_SEARCH": "@:DEFAULT.NAV_MOBILE.BTN_SEARCH",
       "BTN_IDEATION_ACTIONS": "@:VIEWS.IDEATION_CREATE.BTN_IDEATION_ACTIONS",
       "NO_IDEAS_HEADING": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_HEADING",
       "NO_IDEAS_BTN_ADD": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_BTN_ADD",
