--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -339,6 +339,16 @@
       "OPTION_REMOVE": "Remove idea",
       "REPLIES": "{{count}} replies"
     },
+    "IDEA_DIALOG": {
+      "OPTION_EDIT": "@:COMPONENTS.IDEABOX.OPTION_EDIT",
+      "OPTION_FAVOURITE": "@:VIEWS.TOPICS_TOPICID.OPTION_FAVOURITE",
+      "OPTION_UNFAVOURITE": "@:VIEWS.TOPICS_TOPICID.OPTION_UNFAVOURITE",
+      "OPTION_VIEW_PREVIOUS_VERSIONS": "@:COMPONENTS.IDEABOX.OPTION_VIEW_PREVIOUS_VERSIONS",
+      "OPTION_ADD_TO_FOLDER": "@:COMPONENTS.IDEABOX.OPTION_ADD_TO_FOLDER",
+      "OPTION_REPORT": "@:COMPONENTS.IDEABOX.OPTION_REPORT",
+      "OPTION_REMOVE": "@:COMPONENTS.IDEABOX.OPTION_REMOVE",
+      "REPLIES": "@:COMPONENTS.IDEABOX.REPLIES"
+    },
     "IDEA_REPORT": {
       "HEADING": "Report idea to admin",
       "MESSAGE_MAIN": "You are reporting",
