--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2368,12 +2368,12 @@
       "ARGUMENT_EDIT_BTN_POST_AS_POI": "@:VIEWS.TOPICS_TOPICID.BTN_ARGUMENT_POST_AS_POI",
       "ARGUMENT_EDIT_BTN_POST_AS_CON": "@:VIEWS.TOPICS_TOPICID.BTN_ARGUMENT_POST_AS_CON",
       "ARGUMENT_EDIT_BTN_CANCEL_EDIT": "@:LNK_CANCEL",
-      "ARGUMENT_HAS_BEEN_DELETED_BY": "This argument has been deleted by user {{usersFullName}}",
-      "ARGUMENT_HAS_BEEN_DELETED_BY_MODERATOR": "This argument has been deleted by user {{usersFullName}} (moderator)",
+      "ARGUMENT_HAS_BEEN_DELETED_BY": "This contribution has been deleted by user {{usersFullName}}",
+      "ARGUMENT_HAS_BEEN_DELETED_BY_MODERATOR": "This contribution has been deleted by user {{usersFullName}} (moderator)",
       "ARGUMENT_WHY": "Why?",
-      "ARGUMENT_VIEW_ARGUMENT_ANYWAY": "View argument anyway",
-      "ARGUMENT_FOUND_INAPPRIOPRIATE_BY": "This argument was found inappropriate by user <b>{{usersFullName}}</b>",
-      "ARGUMENT_CREATOR_REMOVED_ARGUMENT": "This argument was removed by argument creator",
+      "ARGUMENT_VIEW_ARGUMENT_ANYWAY": "View contribution anyway",
+      "ARGUMENT_FOUND_INAPPRIOPRIATE_BY": "This contribution was found inappropriate by user <b>{{usersFullName}}</b>",
+      "ARGUMENT_CREATOR_REMOVED_ARGUMENT": "This contribution was removed by its creator",
       "ARGUMENT_READ_CODE_OF_CONDUCT": "Read our <a class=\"underlined_link\" href=\"{{codeOfConduct}}\">code of conduct</a> for more information",
       "ARGUMENT_LAST_EDITED": "Last edited: {{edittime}}",
       "PLACEHOLDER_EDIT_REPLY": "Edit your reply here...",
