--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -201,6 +201,12 @@
         "7": "Sunday"
       }
     },
+    "CLOSE_IDEATION_CONFIRM": {
+      "HEADING": "Close ideation",
+      "ARE_YOU_SURE": "Are you sure you want to close this ideation? You cannot undo this action.",
+      "CONFIRM_YES": "Yes, close this ideation",
+      "CONFIRM_NO": "No, keep the ideation open"
+    },
     "CLOSE_VOTING_CONFIRM": {
       "HEADING": "Close voting",
       "ARE_YOU_SURE": "Are you sure you want to close this voting? You cannot undo this action.",
@@ -337,7 +343,10 @@
       "OPTION_ADD_TO_FOLDER": "Add to folder",
       "OPTION_REPORT": "Report to admin",
       "OPTION_REMOVE": "Remove idea",
-      "REPLIES": "{{count}} replies"
+      "REPLIES": "{{count}} replies",
+      "NOTIFICATION_TITLE": "This idea was hidden by a moderator",
+      "NOTIFICATION_LNK_WHY":"@:VIEWS.TOPICS_TOPICID.ARGUMENT_WHY",
+      "NOTIFICATION_LNK_VIEW":"View anyway"
     },
     "IDEA_DIALOG": {
       "OPTION_EDIT": "@:COMPONENTS.IDEABOX.OPTION_EDIT",
@@ -357,6 +366,16 @@
       "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
       "BTN_SUBMIT": "Report to admin",
       "BTN_CANCEL": "@:LNK_CANCEL"
+    },
+    "IDEA_REPORT_MODERATE": {
+      "HEADING": "Moderate idea",
+      "MESSAGE_MAIN": "Participant wrote:",
+      "LABLE_REASON": "@:COMPONENTS.ARGUMENT_REPORT.LABLE_REASON",
+      "PLACEHOLDER_REPORT_TEXT": "@:MODALS.TOPIC_ARGUMENT_REPORT_PLACEHOLDER_REPORT_TEXT",
+      "ARE_YOU_SURE": "Are you sure you want to hide this idea? You cannot undo this action.",
+      "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
+      "BTN_SUBMIT": "Yes, hide this idea",
+      "BTN_CANCEL": "@:MODALS.TOPIC_ARGUMENT_REPORT_BTN_NO"
     },
     "TOPIC_JOIN": {
       "HEADING": "Join topic",
@@ -569,6 +588,8 @@
       "TAB_FOLDERS": "{{count}} folders",
       "BTN_ADD_YOUR_IDEA": "Add your idea",
       "IDEA_FILTER_TYPE": "Idea type",
+      "OPT_EDIT_DEADLINE": "@:MODALS.TOPIC_SETTINGS_BTN_EDIT_DEADLINE",
+      "OPT_CLOSE_IDEATION": "Close ideation",
       "FILTER_ALL": "@:VIEWS.MY_TOPICS.FILTER_ALL",
       "FILTER_TYPE_YOUR_IDEAS": "Your ideas",
       "FILTER_TYPE_FAVOURITES": "Favourites",
@@ -584,7 +605,12 @@
       "NO_IDEAS_BTN_ADD": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_BTN_ADD",
       "NO_IDEAS_DESC_HEADING": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_DESC_HEADING",
       "NO_IDEAS_DESC_BEFORE": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_DESC_BEFORE",
-      "NO_IDEAS_DESC_AFTER": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_DESC_AFTER"
+      "NO_IDEAS_DESC_AFTER": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_DESC_AFTER",
+      "LBL_FOLDER": "Folder",
+      "LBL_IDEAS": "Ideas",
+      "LBL_LAST_ACTIVITY": "Last activity",
+      "LBL_ACTIONS": "@:COMPONENTS.GROUP_INVITE.ACTIONS",
+      "BTN_CREATE_NEW_FOLDER": "Create new folder"
     },
     "TOUR": {
       "LNK_SKIP": "Skip",
