Update ideation folders

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2655,6 +2655,9 @@
       "SECTION_PARTICIPANTS_HEADING": "Participants",
       "SECTION_PARTICIPANTS_LNK_MANAGE": "Manage",
       "SECTION_PARTICIPANTS_BTN_SHARE": "Invite & share",
+      "STATE_ITEM_IDEATION_HEADING": "Ideation",
+      "STATE_ITEM_IDEATION_IDEAS": "{{count}} ideas",
+      "STATE_ITEM_IDEATION_DAYS_LEFT": "Days left:",
       "STATE_ITEM_DISCUSSION_HEADING": "Discussion",
       "STATE_ITEM_DISCUSSION_CONTRIBUTION": "{{count}} contributions",
       "STATE_ITEM_CONTRIBUTION_PRO": "Pro",
