Add ideas to folder

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2686,6 +2686,9 @@
       "SECTION_PARTICIPANTS_LNK_MANAGE": "Manage",
       "SECTION_PARTICIPANTS_BTN_SHARE": "Invite & share",
       "STATE_ITEM_IDEATION_HEADING": "Ideation",
+      "STATE_ITEM_IDEATION_STATUS_ACTIVE": "@:VIEWS.TOPICS_TOPICID.STATE_ITEM_VOTING_STATUS_ACTIVE",
+      "STATE_ITEM_IDEATION_STATUS_ENDED": "@:VIEWS.TOPICS_TOPICID.STATE_ITEM_VOTING_STATUS_ENDED",
+      "STATE_ITEM_IDEATION_IDEAS_COLLECTED": "Ideas collected",
       "STATE_ITEM_IDEATION_IDEAS": "{{count}} ideas",
       "STATE_ITEM_IDEATION_DAYS_LEFT": "Days left:",
       "STATE_ITEM_DISCUSSION_HEADING": "Discussion",
