Update participants filter

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -654,7 +654,7 @@
       "NO_IDEAS_DESC_HEADING": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_DESC_HEADING",
       "NO_IDEAS_DESC_BEFORE": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_DESC_BEFORE",
       "NO_IDEAS_DESC_AFTER": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_DESC_AFTER",
-      "IDEA_PARTICIPANTS_FILTER_RESULTS": "results {{count}}",
+      "IDEA_PARTICIPANTS_FILTER_RESULTS": "Results: {{count}}",
       "LBL_FOLDER": "Folder",
       "LBL_IDEAS": "Ideas",
       "LBL_LAST_ACTIVITY": "Last activity",
