--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -300,6 +300,18 @@
       "LNK_CANCEL": "@:LNK_CANCEL",
       "BTN_SAVE": "@:DIRECTIVES.COS_MODAL.BTN_SAVE"
     },
+    "EDIT_IDEA": {
+      "FOOTER_FORM_TITLE": "Edit idea",
+      "PLACEHOLDER_ADD_STATEMENT_TO_IDEA": "@:COMPONENTS.ADD_IDEA.PLACEHOLDER_ADD_STATEMENT_TO_IDEA",
+      "SUBJECT_CHARACTERS_LEFT": "@:COMPONENTS.ADD_IDEA.SUBJECT_CHARACTERS_LEFT",
+      "IDEA_TYPE_CHARACTER_LIMIT": "@:COMPONENTS.ADD_IDEA.IDEA_TYPE_CHARACTER_LIMIT",
+      "CHARACTER_LIMIT": "@:COMPONENTS.GROUP_INVITE.CHARACTER_LIMIT",
+      "PLACEHOLDER_EXPLAIN_YOUR_IDEA": "@:COMPONENTS.ADD_IDEA.PLACEHOLDER_EXPLAIN_YOUR_IDEA",
+      "BTN_ADD_IMAGE": "@:COMPONENTS.ADD_IDEA.BTN_ADD_IMAGE",
+      "BTN_IDEA_POST": "Update idea",
+      "MSG_ERROR_SUBJECT": "@:COMPONENTS.ADD_IDEA.MSG_ERROR_SUBJECT",
+      "MSG_ERROR_DESCRIPTION": "@:COMPONENTS.ADD_IDEA.MSG_ERROR_DESCRIPTION"
+    },
     "GROUP_ADD_TOPICS_DIALOG": {
       "HEADING": "Add topics to the group",
       "NO_TOPICS_SELECTED": "You haven't selected any topics to add to the group. Please search for topics with the search field above.",
