--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2563,6 +2563,10 @@
       "LBL_OPTION_NEUTRAL": "@:COMPONENTS.TOPIC_VOTE_CREATE.LBL_OPTION_NEUTRAL",
       "LBL_OPTION_VETO": "@:COMPONENTS.TOPIC_VOTE_CREATE.LBL_OPTION_VETO",
       "VOTE_HEADING_DELEGATE": "@:VIEWS.TOPICS_TOPICID.VOTE_HEADING_DELEGATE",
+      "CO_EDITORS_TITLE": "@:VIEWS.TOPIC_CREATE.CO_EDITORS_TITLE",
+      "CO_EDITORS_LNK_MANAGE": "@:VIEWS.TOPIC_CREATE.CO_EDITORS_LNK_MANAGE",
+      "CO_EDITORS_LBL_JOINED": "@:VIEWS.TOPIC_CREATE.CO_EDITORS_LBL_JOINED",
+      "CO_EDITORS_LBL_INVITED": "@:VIEWS.TOPIC_CREATE.CO_EDITORS_LBL_INVITED",
       "FOOTER_BTN_CONTINUE": "@:BTN_CONTINUE",
       "FOOTER_BTN_SAVE_AS_DRAFT": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_AS_DRAFT",
       "FOOTER_BTN_CREATE": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_CREATE",
