--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2069,7 +2069,7 @@
       "FOOTER_BTN_SAVE_CHANGES": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_CHANGES",
       "FOOTER_BTN_SAVE_CHANGES_AND_PUBLISH": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_CHANGES_AND_PUBLISH",
       "HELP_HEADING": "@:VIEWS.TOPIC_CREATE.HELP_HEADING",
-      "HELP_DESCRIPTION": "Creating a voting topic allows you to cut straight to the vote. If you'd like a discussion before voting, create a discussion topic then add a voting phase",
+      "HELP_DESCRIPTION": "Creating an ideation topic allows you to gather ideas before starting discussion.",
       "HELP_LNK_LEARN_MORE": "@:VIEWS.TOPIC_CREATE.HELP_LNK_LEARN_MORE",
       "HELP_NEXT_HEADING": "@:VIEWS.TOPIC_CREATE.HELP_NEXT_HEADING",
       "HELP_NEXT_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.HELP_NEXT_DESCRIPTION",
@@ -2080,9 +2080,9 @@
       "WRITE_TOGETHER_HEADING": "@:VIEWS.TOPIC_CREATE.WRITE_TOGETHER_HEADING",
       "WRITE_TOGETHER_DESC": "@:VIEWS.TOPIC_CREATE.WRITE_TOGETHER_DESC",
       "BTN_INVITE_CO_EDITORS": "@:VIEWS.TOPIC_CREATE.BTN_INVITE_CO_EDITORS",
-      "ERROR_MISSING_QUESTION": "Voting question is required!",
+      "ERROR_MISSING_QUESTION": "Ideation question is required!",
       "ERROR_AT_LEAST_TWO_OPTIONS_REQUIRED": "@:MSG_ERROR_POST_API_USERS_TOPICS_VOTES_40001",
-      "SUCCESS_VOTE_STARTED": "Voting has successfully been started"
+      "SUCCESS_IDEATION_STARTED": "Ideation has successfully been started"
     },
     "LOGIN": {
       "BTN_BACK": "Back to dashboard",
