--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -116,11 +116,11 @@
       "FOOTER_MENU_TITLE": "Join the ideation",
       "FOOTER_MENU_BTN_ADD_IDEA": "Add your idea",
       "FOOTER_FORM_TITLE": "Join the ideation",
-      "PLACEHOLDER_ADD_STATEMENT_TO_IDEA": "Your main statement",
+      "PLACEHOLDER_ADD_STATEMENT_TO_IDEA": "Your idea heading",
       "SUBJECT_CHARACTERS_LEFT": "Characters left: {{chars}}/{{charsLeft}}",
       "IDEA_TYPE_CHARACTER_LIMIT": "Character limit: {{numberOfCharacters}}",
       "CHARACTER_LIMIT": "@:COMPONENTS.GROUP_INVITE.CHARACTER_LIMIT",
-      "PLACEHOLDER_EXPLAIN_YOUR_IDEA": "Write down your idea",
+      "PLACEHOLDER_EXPLAIN_YOUR_IDEA": "Explain your idea",
       "BTN_ADD_IMAGE": "Add image",
       "BTN_IDEA_POST": "Add your idea",
       "MSG_ERROR_SUBJECT": "Idea statement must be 1 to {{chars}} characters long.",
