--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -167,7 +167,7 @@
       "HEADING": "Report argument to admin",
       "MESSAGE_MAIN": "You are reporting",
       "LABLE_REASON": "Reason for reporting *",
-      "PLACEHOLDER_REPORT_TEXT": "Explain, why you found this argument inappropriate...",
+      "PLACEHOLDER_REPORT_TEXT": "Explain why you found this argument inappropriate...",
       "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
       "BTN_SUBMIT": "Report to admin",
       "BTN_CANCEL": "@:LNK_CANCEL"
@@ -422,7 +422,7 @@
       "HEADING": "Report idea to admin",
       "MESSAGE_MAIN": "You are reporting",
       "LABLE_REASON": "Reason for reporting *",
-      "PLACEHOLDER_REPORT_TEXT": "Explain, why you found this idea inappropriate...",
+      "PLACEHOLDER_REPORT_TEXT": "Explain why you found this idea inappropriate...",
       "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
       "BTN_SUBMIT": "Report to admin",
       "BTN_CANCEL": "@:LNK_CANCEL"
@@ -627,7 +627,7 @@
       "HEADING": "Report topic",
       "MESSAGE_MAIN": "@:COMPONENTS.ARGUMENT_REPORT.MESSAGE_MAIN",
       "LABLE_REASON": "@:COMPONENTS.ARGUMENT_REPORT.LABLE_REASON",
-      "PLACEHOLDER_REPORT_TEXT": "Explain, why you found this argument inappropriate...",
+      "PLACEHOLDER_REPORT_TEXT": "Explain why you found this argument inappropriate...",
       "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
       "BTN_SUBMIT": "Report to admin",
       "BTN_CANCEL": "@:LNK_CANCEL"
@@ -1310,7 +1310,7 @@
     "TOPIC_ARGUMENT_REPORT_DESCRIPTION": "Argument by participant {{usersFullName}}",
     "TOPIC_ARGUMENT_REPORT_LABEL_REASON": "Reason for reporting",
     "TOPIC_ARGUMENT_REPORT_LABEL_REASON_REQUIRED": "(required)",
-    "TOPIC_ARGUMENT_REPORT_PLACEHOLDER_REPORT_TEXT": "Explain, why you found this argument inappropriate...",
+    "TOPIC_ARGUMENT_REPORT_PLACEHOLDER_REPORT_TEXT": "Explain why you found this argument inappropriate...",
     "TOPIC_ARGUMENT_REPORT_TXT_ARE_YOU_SURE": "Are you sure you want to report this argument? You cannot undo this action.",
     "TOPIC_ARGUMENT_REPORT_BTN_YES": "Yes, report this argument",
     "TOPIC_ARGUMENT_REPORT_BTN_NO": "No, I changed my mind",
