--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -418,6 +418,16 @@
       "OPTION_REMOVE": "@:COMPONENTS.IDEABOX.OPTION_REMOVE",
       "REPLIES": "@:COMPONENTS.IDEABOX.REPLIES"
     },
+    "IDEA_REPLY_FORM": {
+      "HEADING": "@:COMPONENTS.ARGUMENT_REPLY.HEADING",
+      "SUBJECT_CHARACTERS_LEFT": "@:COMPONENTS.POST_ARGUMENT.SUBJECT_CHARACTERS_LEFT",
+      "PLACEHOLDER_ADD_SUBJECT_TO_ARGUMENT": "@:COMPONENTS.POST_ARGUMENT.PLACEHOLDER_ADD_SUBJECT_TO_ARGUMENT",
+      "CHARACTER_LIMIT": "@:VIEWS.TOPICS_TOPICID.COMMENT_TYPE_CHARACTER_LIMIT",
+      "ERROR_NO_TEXT": "@:COMPONENTS.ARGUMENT_REPLY.ERROR_NO_TEXT",
+      "PLACEHOLDER_WRITE_REPLY_HERE": "@:VIEWS.TOPICS_TOPICID.PLACEHOLDER_WRITE_REPLY_HERE",
+      "BTN_POST_REPLY": "@:VIEWS.TOPICS_TOPICID.BTN_ARGUMENT_POST_REPLY",
+      "BTN_UPDATE_REPLY": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_CHANGES"
+    },
     "IDEA_REPORT": {
       "HEADING": "Report idea to admin",
       "MESSAGE_MAIN": "You are reporting",
@@ -426,6 +436,25 @@
       "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
       "BTN_SUBMIT": "Report to admin",
       "BTN_CANCEL": "@:LNK_CANCEL"
+    },
+    "IDEA_REPLY_REPORT": {
+      "HEADING": "Report reply to admin",
+      "MESSAGE_MAIN": "@:COMPONENTS.ARGUMENT_REPORT.MESSAGE_MAIN",
+      "LABLE_REASON": "@:COMPONENTS.ARGUMENT_REPORT.LABLE_REASON",
+      "PLACEHOLDER_REPORT_TEXT": "Explain, why you found this reply inappropriate...",
+      "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
+      "BTN_SUBMIT": "@:COMPONENTS.ARGUMENT_REPORT.BTN_SUBMIT",
+      "BTN_CANCEL": "@:LNK_CANCEL"
+    },
+    "IDEA_REPLY_REPORT_MODERATE": {
+      "HEADING": "Moderate reply",
+      "MESSAGE_MAIN": "@:COMPONENTS.ARGUMENT_REPORT_MODERATE.MESSAGE_MAIN",
+      "LABLE_REASON": "@:COMPONENTS.ARGUMENT_REPORT.LABLE_REASON",
+      "PLACEHOLDER_REPORT_TEXT": "@:MODALS.TOPIC_ARGUMENT_REPORT_PLACEHOLDER_REPORT_TEXT",
+      "ARE_YOU_SURE": "Are you sure you want to hide this reply? You cannot undo this action.",
+      "ERROR_TEXT": "@:MSG_ERROR_POST_API_TOPICS_COMMENTS_REPORTS_40000_TEXT",
+      "BTN_SUBMIT": "Yes, hide this reply",
+      "BTN_CANCEL": "@:MODALS.TOPIC_ARGUMENT_REPORT_BTN_NO"
     },
     "IDEA_REPORT_MODERATE": {
       "HEADING": "Moderate idea",
