--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -471,7 +471,7 @@
       "MESSAGE_MAIN": "You want to join",
       "MESSAGE_DESCRIPTION": "Are you sure you want to join the topic? See the explanation below for what this means. You can always easily leave a topic if you want to.",
       "HEADING_WHAT_CAN_YOU_DO": "What you can do once you join a topic",
-      "ITEM_PARTICIPATE": "Participate in discussions and voting",
+      "ITEM_PARTICIPATE": "Participate in ideation, discussions and voting",
       "ITEM_NOTIFICATIONS": "Receive notifications of activity within the topic",
       "ITEM_REQUEST_EDIT": "Request to become a co-creator",
       "BTN_JOIN": "@:VIEWS.TOPICS_TOPICID.BTN_JOIN",
@@ -1539,7 +1539,7 @@
     "TOPIC_INVITE_VIEW_TXT_COMPLETE_ACCOUNT": "<b>Heads up!</b> You must finish creating your account with {{email}} to access this topic",
     "TOPIC_INVITE_VIEW_BTN_LOGIN_AS": "To access this topic, please log in using {{email}}",
     "TOPIC_INVITE_VIEW_HEADING_AFTER_JOIN": "What you can do once you join a topic",
-    "TOPIC_INVITE_VIEW_AFTER_JOIN_ITEM_1": "Participate in discussions and voting",
+    "TOPIC_INVITE_VIEW_AFTER_JOIN_ITEM_1": "@:COMPONENTS.TOPIC_JOIN.ITEM_PARTICIPATE",
     "TOPIC_INVITE_VIEW_AFTER_JOIN_ITEM_2": "Receive notifications of activity within the topic",
     "TOPIC_INVITE_VIEW_AFTER_JOIN_ITEM_3": "Request to become a co-editor",
     "TOPIC_INVITE_VIEW_BTN_JOIN": "@:VIEWS.TOPICS_TOPICID.BTN_JOIN",
