ADd new idea animation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -119,6 +119,7 @@
       "PLACEHOLDER_ADD_STATEMENT_TO_IDEA": "Your idea heading",
       "SUBJECT_CHARACTERS_LEFT": "Characters left: {{chars}}/{{charsLeft}}",
       "IDEA_TYPE_CHARACTER_LIMIT": "Character limit: {{numberOfCharacters}}",
+      "IDEA_TYPE_CHARACTERS_LEFT": "@:COMPONENTS.ADD_IDEA.SUBJECT_CHARACTERS_LEFT",
       "CHARACTER_LIMIT": "@:COMPONENTS.GROUP_INVITE.CHARACTER_LIMIT",
       "PLACEHOLDER_EXPLAIN_YOUR_IDEA": "Explain your idea",
       "BTN_ADD_IMAGE": "Add image",
@@ -305,6 +306,7 @@
       "PLACEHOLDER_ADD_STATEMENT_TO_IDEA": "@:COMPONENTS.ADD_IDEA.PLACEHOLDER_ADD_STATEMENT_TO_IDEA",
       "SUBJECT_CHARACTERS_LEFT": "@:COMPONENTS.ADD_IDEA.SUBJECT_CHARACTERS_LEFT",
       "IDEA_TYPE_CHARACTER_LIMIT": "@:COMPONENTS.ADD_IDEA.IDEA_TYPE_CHARACTER_LIMIT",
+      "IDEA_TYPE_CHARACTERS_LEFT": "@:COMPONENTS.ADD_IDEA.SUBJECT_CHARACTERS_LEFT",
       "CHARACTER_LIMIT": "@:COMPONENTS.GROUP_INVITE.CHARACTER_LIMIT",
       "PLACEHOLDER_EXPLAIN_YOUR_IDEA": "@:COMPONENTS.ADD_IDEA.PLACEHOLDER_EXPLAIN_YOUR_IDEA",
       "BTN_ADD_IMAGE": "@:COMPONENTS.ADD_IDEA.BTN_ADD_IMAGE",
