--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1359,6 +1359,11 @@
     "TOPIC_DELETE_ARGUMENT_TXT_ARE_YOU_SURE": "Are you sure you want to delete this argument? You cannot undo this action.",
     "TOPIC_DELETE_ARGUMENT_BTN_NO": "@:MODALS.TOPIC_ARGUMENT_REPORT_BTN_NO",
     "TOPIC_DELETE_ARGUMENT_BTN_YES": "Yes, delete this argument",
+    "TOPIC_DELETE_IDEA_REPLY_TITLE": "Delete reply",
+    "TOPIC_DELETE_IDEA_REPLY_DESCRIPTION": "Reply by {{usersFullName}}",
+    "TOPIC_DELETE_IDEA_REPLY_TXT_ARE_YOU_SURE": "Are you sure you want to delete this reply? You cannot undo this action.",
+    "TOPIC_DELETE_IDEA_REPLY_BTN_NO": "@:MODALS.TOPIC_ARGUMENT_REPORT_BTN_NO",
+    "TOPIC_DELETE_IDEA_REPLY_BTN_YES": "Yes, delete this reply",
     "TOPIC_DELETE_IDEA_TITLE": "Delete idea",
     "TOPIC_DELETE_IDEA_DESCRIPTION": "Idea by {{usersFullName}}",
     "TOPIC_DELETE_IDEA_TXT_ARE_YOU_SURE": "Are you sure you want to delete this idea? You cannot undo this action.",
