--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,6 +21,7 @@
   "BTN_BULK_ACTIONS": "Bulk actions",
   "TXT_TOPIC_STATUS_ALL": "all",
   "TXT_TOPIC_STATUS_DRAFT": "draft",
+  "TXT_TOPIC_STATUS_IDEATION": "ideation",
   "TXT_TOPIC_STATUS_INPROGRESS": "in progress",
   "TXT_TOPIC_STATUS_VOTING": "in voting",
   "TXT_TOPIC_STATUS_FOLLOWUP": "in follow-up",
