--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2500,7 +2500,7 @@
       "CO_EDITORS_LBL_INVITED": "Invited",
       "BTN_INVITE_CO_EDITORS": "Invite co-creators",
       "HELP_HEADING": "Did you know?",
-      "HELP_DESCRIPTION": "Creating a discussion topic allows the participants to use pro & con arguments, which can help you shape the next phases of the topic.",
+      "HELP_DESCRIPTION": "Creating a discussion topic allows participants to share pro & con arguments, before you start a vote or follow-up. Want to gather ideas? Make an ideation topic instead.",
       "HELP_NEXT_HEADING": "What’s next?",
       "HELP_NEXT_DESCRIPTION": "What can you do when the topic is published?",
       "HELP_LNK_LEARN_MORE": "Learn more about topics",
