--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2851,7 +2851,7 @@
       "FOOTER_BTN_SAVE_CHANGES": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_CHANGES",
       "FOOTER_BTN_SAVE_CHANGES_AND_PUBLISH": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_CHANGES_AND_PUBLISH",
       "HELP_HEADING": "@:VIEWS.TOPIC_CREATE.HELP_HEADING",
-      "HELP_DESCRIPTION": "Creating a voting topic allows you to cut straight to the vote. If you'd like a discussion before voting, create a discussion topic then add a voting phase",
+      "HELP_DESCRIPTION": "Creating a voting topic allows you to cut straight to the vote. If you'd like to gather ideas or discussion pros and cons before voting, create an ideation or discusion topic, then add a voting phase",
       "HELP_LNK_LEARN_MORE": "@:VIEWS.TOPIC_CREATE.HELP_LNK_LEARN_MORE",
       "HELP_NEXT_HEADING": "@:VIEWS.TOPIC_CREATE.HELP_NEXT_HEADING",
       "HELP_NEXT_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.HELP_NEXT_DESCRIPTION",
