--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
   "MSG_REDESIGN_CONTENT": "In the coming months, we’ll be starting to roll out a new and improved Citizen OS! Any questions, concerns, or to offer your help as a beta tester, contact Sara on <a href=\"mailto:info@citizenos.com\">info@citizenos.com</a>",
   "MSG_REDESIGN_BTN_CLOSE": "OK, got it",
   "META_DEFAULT_TITLE": "Citizen OS - an e-decisionmaking platform for communities.",
-  "META_DEFAULT_DESCRIPTION": "Citizen OS enables participative discussion and voting for groups, when getting together offline or online at the same time is not an option.",
+  "META_DEFAULT_DESCRIPTION": "Citizen OS enables participative idea-gathering, discussion and voting for groups, when getting together offline or online at the same time is not an option.",
   "META_DEFAULT_KEYWORDS": "e-decisionmaking, e-governance, e-democracy, democracy, direct democracy, liquid democracy",
   "BTN_YES": "YES",
   "BTN_NO": "NO",
@@ -236,7 +236,7 @@
     },
     "CREATE": {
       "TITLE_DISCUSSION": "Discussion topic",
-      "DESC_DISCUSSION": "Choose this if you want to encourage a discussion before potentially moving to voting and/or follow-up. No discussion phase available.",
+      "DESC_DISCUSSION": "Choose this if you want to encourage a discussion before potentially moving to voting and/or follow-up. No ideation phase available.",
       "TITLE_IDEATION": "Ideation topic",
       "DESC_IDEATION": "Choose this if you want to gather ideas before potentially moving to discussion and/or voting and follow-up.",
       "TITLE_VOTE": "Voting topic",
@@ -474,7 +474,7 @@
       "MESSAGE_MAIN": "You want to join",
       "MESSAGE_DESCRIPTION": "Are you sure you want to join the topic? See the explanation below for what this means. You can always easily leave a topic if you want to.",
       "HEADING_WHAT_CAN_YOU_DO": "What you can do once you join a topic",
-      "ITEM_PARTICIPATE": "Participate in ideation, discussions and voting",
+      "ITEM_PARTICIPATE": "Participate in idea-gathering, discussions and voting",
       "ITEM_NOTIFICATIONS": "Receive notifications of activity within the topic",
       "ITEM_REQUEST_EDIT": "Request to become a co-creator",
       "BTN_JOIN": "@:VIEWS.TOPICS_TOPICID.BTN_JOIN",
@@ -716,9 +716,9 @@
       "LNK_FINISH": "Finish",
       "HEADING_DASHBOARD": "Dashboard tour",
       "DASHBOARD_STEP_1_TITLE": "Create actions",
-      "DASHBOARD_STEP_1_DESC": "Quickly create a new discussion topic or voting topic, or set up a new group.",
+      "DASHBOARD_STEP_1_DESC": "Quickly create a new ideation, discussion or voting topic, or set up a new group.",
       "DASHBOARD_STEP_2_TITLE": "Main menu",
-      "DASHBOARD_STEP_2_DESC": "The main menu serves as your main navigation through the platform. There are quick links to all your topics based on their current phase, i.e. discussion, voting, or follow-up, as well as to any groups you're a member of.",
+      "DASHBOARD_STEP_2_DESC": "The main menu serves as your main navigation through the platform. There are quick links to all your topics based on their current phase, i.e. ideation, discussion, voting, or follow-up, as well as to any groups you're a member of.",
       "DASHBOARD_STEP_2_DESC2": "You can also access your profile, change the language, or go to the Help Centre.",
       "DASHBOARD_STEP_3_TITLE": "Activity feed",
       "DASHBOARD_STEP_3_DESC": "Find all your new activity here – new arguments, voting updates, follow-up posts and more. You can open and close the activity feed whenever you want.",
@@ -769,9 +769,9 @@
       "TOPIC_STEP_1_TITLE": "Topic phases",
       "TOPIC_STEP_1_DESC": "A topic can have different phases.",
       "TOPIC_STEP_1_LBL_DISCUSSION": "Discussion:",
-      "TOPIC_STEP_1_DESC_DISCUSSION": "In this phase, the main idea is to hold a constructive discussion using pro and con arguments.",
+      "TOPIC_STEP_1_DESC_DISCUSSION": "In a discussion phase, the main idea is to have a constructive dialogue using pro and con arguments.",
       "TOPIC_STEP_1_LBL_IDEATION": "Ideation:",
-      "TOPIC_STEP_1_DESC_IDEATION": "A topic can have an ideation phase, in which anyone can share their ideas on how to tackle the issue at hand.",
+      "TOPIC_STEP_1_DESC_IDEATION": "In this phase, anyone can share their ideas on how to tackle the issue at hand, and feed back on the ideas of others.",
       "TOPIC_STEP_1_LBL_VOTE": "Voting:",
       "TOPIC_STEP_1_DESC_VOTE": "When there’s a need for a clear representation of where participants lean, you can hold a vote.",
       "TOPIC_STEP_1_LBL_FOLLOW_UP": "Follow-up:",
