--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,7 +21,7 @@
   "BTN_BULK_ACTIONS": "Bulk actions",
   "TXT_TOPIC_STATUS_ALL": "all",
   "TXT_TOPIC_STATUS_DRAFT": "draft",
-  "TXT_TOPIC_STATUS_IDEATION": "ideation",
+  "TXT_TOPIC_STATUS_IDEATION": "in ideation",
   "TXT_TOPIC_STATUS_INPROGRESS": "in progress",
   "TXT_TOPIC_STATUS_VOTING": "in voting",
   "TXT_TOPIC_STATUS_FOLLOWUP": "in follow-up",
@@ -795,7 +795,7 @@
       "TOPIC_STEP_5_TITLE": "Topic phases",
       "TOPIC_STEP_5_DESC": "A topic can consist of several phases. Here, participants can see an overview of each phase’s status, and admins can add another phase.",
       "TOPIC_STEP_6_TITLE": "Topic text",
-      "TOPIC_STEP_6_DESC": "The topic text is the basis for the discussion and/or voting. The main background information will be shared here.",
+      "TOPIC_STEP_6_DESC": "The topic text is the basis for the ideation and/or discussion and voting. The main background information will be shared here.",
       "TOPIC_STEP_6_DESC2": "By default, we will keep this collapsed, but you can expand it at any time to read the entire text.",
       "TOPIC_STEP_7_TITLE": "Topic discussion",
       "TOPIC_STEP_7_DESC": "The main discussion will take place here. Anyone can post a pro or con argument, or provide some additional information.",
@@ -809,7 +809,7 @@
       "TOPIC_MOBILE_STEP_1_LBL_DISCUSSION": "@:COMPONENTS.TOUR.TOPIC_STEP_1_LBL_DISCUSSION",
       "TOPIC_MOBILE_STEP_1_DESC_DISCUSSION": "This is where the discussion takes place, using pro and con arguments.",
       "TOPIC_MOBILE_STEP_1_LBL_IDEATION": "@:COMPONENTS.TOUR.TOPIC_STEP_1_LBL_IDEATION",
-      "TOPIC_MOBILE_STEP_1_DESC_IDEATION": "A topic can have an ideation phase, in which anyone can share their ideas on how to tackle the issue at hand.",
+      "TOPIC_MOBILE_STEP_1_DESC_IDEATION": "A topic can start with an ideation phase, in which anyone can share their ideas on how to tackle the issue at hand.",
       "TOPIC_MOBILE_STEP_1_LBL_VOTE": "@:COMPONENTS.TOUR.TOPIC_STEP_1_LBL_VOTE",
       "TOPIC_MOBILE_STEP_1_DESC_VOTE": "When there’s a need for a clear representation of where participants lean, you can hold a vote.",
       "TOPIC_MOBILE_STEP_1_LBL_FOLLOW_UP": "@:COMPONENTS.TOUR.TOPIC_STEP_1_LBL_FOLLOW_UP",
@@ -1834,7 +1834,7 @@
       "TITLE_LATEST_ACHIEVEMENT": "Latest achievement",
       "BTN_GLOBAL_ACTIVITIES": "Recent activity",
       "HAVENT_ENGAGED_TOPICS_HEADING": "You haven’t engaged in any topics yet",
-      "HAVENT_ENGAGED_TOPICS_DESCRIPTION": "Engage in topics by joining in discussions and voting. Or create your own topics and invite participants so they can share their thoughts.",
+      "HAVENT_ENGAGED_TOPICS_DESCRIPTION": "Engage in topics by submitting your ideas, pro/con arguments and votes. Or create your own topics and invite participants so they can share their thoughts.",
       "HAVENT_ENGAGED_BTN_CREATE": "Create a topic",
       "HAVENT_ENGAGED_BTN_VIEW_PUBLIC_TOPICS": "View public topics",
       "HAVENT_ENGAGED_BTN_VIEW_PUBLIC_GROUPS": "View public groups",
@@ -1876,9 +1876,9 @@
       "FEATURE_IDEATION_HEADING": "Gather ideas",
       "FEATURE_IDEATION_ITEM_1": "Create and co-edit a topic text",
       "FEATURE_IDEATION_ITEM_2": "Invite and share with participants",
-      "FEATURE_IDEATION_ITEM_3": "Participants can share ideas and comment on each other's",
+      "FEATURE_IDEATION_ITEM_3": "Participants can share ideas and comment on each others'",
       "FEATURE_IDEATION_ITEM_4": "Idea popularity can be measured via 'likes'",
-      "FEATURE_IDEATION_FOOTER_INFO": "After gathering ideas you can move the topic into voting and/or follow-up.",
+      "FEATURE_IDEATION_FOOTER_INFO": "After gathering ideas you can move the topic into discussion and/or voting and follow-up.",
       "FEATURE_IDEATION_FOOTER_BTN": "Create an ideation topic",
       "FEATURE_VOTING_HEADING": "Collect votes",
       "FEATURE_VOTING_ITEM_1": "Create and co-edit a text",
@@ -1967,7 +1967,7 @@
       "TAB_TOPICS": "Topics",
       "TAB_MEMBERS": "Members",
       "HAVENT_ENGAGED_TOPICS_HEADING": "This group doesn't have any topics yet",
-      "HAVENT_ENGAGED_TOPICS_DESCRIPTION": "Topics are spaces for people to engage in discussions and voting. Group admins can add topics, so that members can share their thoughts.",
+      "HAVENT_ENGAGED_TOPICS_DESCRIPTION": "Topics are spaces for people to engage in ideation, discussions and voting. Group admins can add topics, so that members can share their thoughts.",
       "HAVENT_ENGAGED_BTN_VIEW_PUBLIC_TOPICS": "@:VIEWS.MY_TOPICS.HAVENT_ENGAGED_BTN_VIEW_PUBLIC_TOPICS",
       "BTN_ADD_TOPICS": "Add existing topic",
       "BTN_ADD_MEMBERS": "Add members",
