--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -721,7 +721,7 @@
       "DASHBOARD_STEP_2_DESC": "The main menu serves as your main navigation through the platform. There are quick links to all your topics based on their current phase, i.e. ideation, discussion, voting, or follow-up, as well as to any groups you're a member of.",
       "DASHBOARD_STEP_2_DESC2": "You can also access your profile, change the language, or go to the Help Centre.",
       "DASHBOARD_STEP_3_TITLE": "Activity feed",
-      "DASHBOARD_STEP_3_DESC": "Find all your new activity here – new arguments, voting updates, follow-up posts and more. You can open and close the activity feed whenever you want.",
+      "DASHBOARD_STEP_3_DESC": "Find all your new activity here – new ideas, arguments, voting updates, follow-up posts and more. You can open and close the activity feed whenever you want.",
       "DASHBOARD_STEP_3_DESC2": "If there has been new activity since you last visited, the activity feed will be open by default.",
       "DASHBOARD_STEP_4_TITLE": "@:DEFAULT.NAV_MOBILE.BTN_SEARCH",
       "DASHBOARD_STEP_4_DESC": "Looking for a topic or a group? Search for it here.",
