--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2124,9 +2124,10 @@
       "HELP_LNK_LEARN_MORE": "@:VIEWS.TOPIC_CREATE.HELP_LNK_LEARN_MORE",
       "HELP_NEXT_HEADING": "@:VIEWS.TOPIC_CREATE.HELP_NEXT_HEADING",
       "HELP_NEXT_DESCRIPTION": "@:VIEWS.TOPIC_CREATE.HELP_NEXT_DESCRIPTION",
+      "HELP_ITEM_ADD_DISCUSSION":"Add a pro/con discussion phase",
       "HELP_ITEM_SHARE_AND_INVITE": "@:VIEWS.TOPIC_CREATE.HELP_ITEM_SHARE_AND_INVITE",
-      "HELP_ITEM_START_COLLECTING_VOTES": "Start collecting votes",
-      "HELP_ITEM_ADD_IDEATION": "@:VIEWS.TOPIC_CREATE.HELP_ITEM_ADD_IDEATION",
+      "HELP_ITEM_ADD_VOTING": "Add voting to choose from ideas or vote on a question",
+      "HELP_ITEM_START_GATHERING_IDEAS": "Start gathering ideas",
       "HELP_ITEM_ADD_FOLLOW_UP": "@:VIEWS.TOPIC_CREATE.HELP_ITEM_ADD_FOLLOW_UP",
       "WRITE_TOGETHER_HEADING": "@:VIEWS.TOPIC_CREATE.WRITE_TOGETHER_HEADING",
       "WRITE_TOGETHER_DESC": "@:VIEWS.TOPIC_CREATE.WRITE_TOGETHER_DESC",
