Ideation mobile and tablet views

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -705,6 +705,9 @@
       "FILTER_ORDER_MOST_REPLIES": "Most replies",
       "IDEA_FILTER_PARTICIPANTS": "Participants",
       "FILTER_PLACEHOLDER_SEARCH": "@:DEFAULT.NAV_MOBILE.BTN_SEARCH",
+      "LBL_FILTER":"@:LNK_FILTER",
+      "BTN_APPLY":"@:BTN_APPLY",
+      "BTN_RESET_FILTERS":"@:BTN_RESET_FILTER",
       "BTN_IDEATION_ACTIONS": "@:VIEWS.IDEATION_CREATE.BTN_IDEATION_ACTIONS",
       "NO_IDEAS_HEADING": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_HEADING",
       "NO_IDEAS_BTN_ADD": "@:VIEWS.IDEATION_CREATE.NO_IDEAS_BTN_ADD",
