--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -127,7 +127,7 @@
       "BTN_ADD_IMAGE": "Add image",
       "BTN_IDEA_POST": "Add your idea",
       "MSG_SUCCESS": "Idea successfully posted",
-      "MSG_ERROR_SUBJECT": "Idea heading must be 1 to {{chars}} characters long.",
+      "MSG_ERROR_SUBJECT": "Idea statement must be 1 to {{chars}} characters long.",
       "MSG_ERROR_DESCRIPTION": "Idea description must be 1 to {{chars}} characters long."
     },
     "ADD_IDEA_FOLDER": {
