--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -696,6 +696,7 @@
       "BTN_ADD_IDEAS_TO_FOLDER": "Add ideas to folder",
       "BTN_ADD_YOUR_IDEA": "Add your idea",
       "IDEA_FILTER_TYPE": "Idea type",
+      "LBL_IDEATION_CLOSED": "The ideation phase has now closed",
       "OPT_ADD_DEADLINE":"@:COMPONENTS.TOPIC_VOTE_CAST.OPT_ADD_DEADLINE",
       "OPT_EDIT_DEADLINE": "@:MODALS.TOPIC_SETTINGS_BTN_EDIT_DEADLINE",
       "OPT_CLOSE_IDEATION": "End ideation",
