--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -696,7 +696,8 @@
       "BTN_ADD_IDEAS_TO_FOLDER": "Add ideas to folder",
       "BTN_ADD_YOUR_IDEA": "Add your idea",
       "IDEA_FILTER_TYPE": "Idea type",
-      "LBL_IDEATION_CLOSED": "The ideation phase has now closed",
+      "HEADING_IDEATION_ENDED": "The ideation has ended!",
+      "TXT_IDEATION_ENDED": "A topic admin has closed the ideation. You can no longer add ideas, but you can still read, reply and favourite them.",
       "OPT_ADD_DEADLINE":"@:COMPONENTS.TOPIC_VOTE_CAST.OPT_ADD_DEADLINE",
       "OPT_EDIT_DEADLINE": "@:MODALS.TOPIC_SETTINGS_BTN_EDIT_DEADLINE",
       "OPT_CLOSE_IDEATION": "End ideation",
